# Bhaal-s-Little-Helper

./: .pdm-python  .pre-commit-config.yaml  pyproject.toml
src/: database.py  discord_bot.py  schemas.py  sorter.py
